--- a/clients/src/components/Entry/entry.css
+++ b/clients/src/components/Entry/entry.css
@@ -3,10 +3,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 80px;
+    height: 60px;
     background-color: white;
+    margin-bottom: 10px;
     /* border-right: 7px solid green; */
-    /* border-right: 7px solid green; */
+    border-right: 7px solid red;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+
+.entry_container:hover{
+    transform: scale(1.025);
+    transition: ease-in-out 0.3s;
 }
 
 
@@ -25,5 +32,5 @@
 .entry_container_icon{
     display: flex;
     justify-content: space-between;
-    width: 100px;
+    width: 60px;
 }
